Minor typo in a comment.

--- a/dklab_realplexor.html
+++ b/dklab_realplexor.html
@@ -16,7 +16,7 @@ Dklab_Realplexor_Loader = {
 
     JS_IDENTIFIER: '$IDENTIFIER',
 
-    // It debug mode turned on?
+    // Is debug mode turned on?
     JS_DEBUG: $JS_DEBUG,
 
     // Count of sequential bounces.
